--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,7 @@ body {
 }
 .heading {
   font-size: 56px;
+  font-weight: 500;
 }
 @media (max-width: 1100px) {
   .heading {
@@ -70,9 +71,7 @@ body {
 .scroll-animation {
   animation: scroll-animation 30s linear infinite;
 }
-.scroll-animation:hover {
-  animation-play-state: paused;
-}
+
 .background {
   background: url(./assets/background.png);
 }
@@ -226,5 +225,5 @@ span {
   background-color: rgba(39, 39, 39, 0.072);
   background-attachment: fixed;
   background-size: cover;
-  backdrop-filter: blur(20px);
+  /* filter: blur(10px); */
 }
